--- a/Source/Portfolio.Web/ClientApp/index.html
+++ b/Source/Portfolio.Web/ClientApp/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <title>clientapp</title>
+    <title>Wiktor Wijata | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
